# metrik

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
app/: asgi.py
app/api/: config.py  dependencies.py  errors_handlers.py  middleware.py
app/api/common/: contracts.py
app/api/knowledge/: __init__.py  contracts.py  endpoints.py
app/api/link/: __init__.py  contracts.py  endpoints.py
app/api/skill/: __init__.py  contracts.py  endpoints.py
app/api/tree/: __init__.py  contracts.py  endpoints.py
app/api/user/: __init__.py  contracts.py  endpoints.py
app/common/: errors.py
app/core/tree/: errors.py  models.py  services.py
app/core/user/: errors.py  models.py  services.py
app/service/edgedb/: config.py  knowledge.py  link.py  skill.py  tree.py  user.py
app/service/security/: jwt.py  password.py
config/: example.env
config/prometheus/: prometheus.yml
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql  00005.edgeql  00006.edgeql
scripts/: __init__.py  add_like_in_skill_tree.edgeql  delete_knowledge.edgeql  delete_link.edgeql  delete_skill.edgeql  insert_knowledge.edgeql  insert_link.edgeql  insert_skill.edgeql  insert_tree.edgeql  insert_user.edgeql  remove_like_in_skill_tree.edgeql  select_many_knowledge.edgeql  select_many_link.edgeql  select_many_skill_filter_tree.edgeql  select_many_tree_filter_author.edgeql  select_many_tree_filter_author_name.edgeql  select_skill.edgeql  select_tree_filter_uid.edgeql  select_user_filter_email.edgeql  select_user_filter_uid.edgeql  select_user_filter_username.edgeql  update_knowledge_info.edgeql  update_skill_info.edgeql  update_tree_info.edgeql  update_user_info.edgeql  update_user_password.edgeql
tests/: conftest.py
tests/assertions/: response.py
tests/e2e/link/: test_get.py  test_post.py
tests/e2e/skill/: test_get.py  test_post.py
tests/fixtures/: api.py  client.py  faker.py  models.py
(+10 files in other folders)
